Tue Feb 28 09:32:17 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/drb/extservm.rb (invoke_service_command): cannot invoke command
	  if command name is quoted on mswin32. [ruby-dev:28400]

Fri Feb 24 20:07:23 2006  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/drbtest.rb (add_service_command): quote pathnames in the
	  server's command line for space contained directory names.
	  Thanks, arton. [ruby-dev:28386]

Fri Feb 24 12:11:08 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* instruby.rb: install *.exe.manifest and *.dll.manifest if exist.
	  It's for VC++8.

Fri Feb 24 11:33:52 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub (HAVE_HYPOT): bcc32 has hypot().

Fri Feb 24 11:19:58 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (time_new_internal): add prototype to tell the compiler
	  arugments types.

	* win32/win32.c (NtInitialize): need to set a handler for VC++8.

Fri Feb 24 08:19:16 2006  NARUSE, Yui  <naruse@ruby-lang.org>

	* test.rb: Removed.  Obsolete by test/nkf.

	* ext/.document: enabled documents in nkf and kconv

	* ext/nkf/nkf.c ext/nkf/lib/kconv.rb: Add rdoc.

Thu Feb 23 22:39:59 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: use borlndmm.dll if possible. bcc32's RTL internal
	  memory manager cannot handle large memory block properly.
	  ex: 10000.times { "" << "." * 529671; GC.start } # crash
	  [ruby-dev:28230]

Thu Feb 23 13:20:28 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* eval.c (SETUP_ARGS0): fixed memory corruption. [ruby-dev:28360]

Tue Feb 21 02:18:46 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in (mingw): have link.  [ruby-list:41838]

	* win32/Makefile.sub (config.h): ditto.

Tue Feb 21 02:07:39 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (f_arglist): should set command_start = Qtrue for
	  command body.  [ruby-talk:180648]

Mon Feb 20 17:37:26 2006  Tanaka Akira  <akr@m17n.org>

	* mkconfig.rb: alias RbConfig for Config.
