@@ -1,3 +1,9 @@
+Wed Mar  1 00:24:31 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>
+
+	* lib/rdoc/parsers/parse_rb.rb (read_escape): could not handle /\^/.
+	  merged Mr. Ishizuka's lib/irb/ruby-lex.rb 's patch rev 1.29.
+	  [ruby-talk:181631] [ruby-dev:28404]
+
 Tue Feb 28 09:32:17 2006  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* lib/drb/extservm.rb (invoke_service_command): cannot invoke command
